test-httpd/test-httpd.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-httpd

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-httpd
  namespace: test-httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-httpd
  template:
    metadata:
      labels:
        app: test-httpd
    spec:
      containers:
      - image: httpd
        imagePullPolicy: IfNotPresent
        name: test-httpd
        ports:
        - containerPort: 80
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: test-httpd
  namespace: test-httpd
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: test-httpd
