test-httpd/ingress-test-httpd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-httpd
  namespace: test-httpd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /test-httpd
            pathType: Prefix
            backend:
              service:
                name: test-httpd
                port:
                  number: 80
